# dissertation_liverpool_hope_2025

./: Methodology3.docx  README.md
SpaceTravellarAI/: AIOptimser.py  AnomalyDetector.py  MissionPhaseAwareness.py  TransformerModel.py  ai_captain_checkpoint.json  ai_captain_checkpoint.keras  ai_captain_emergency_checkpoint.json  ai_captain_emergency_checkpoint.keras  anomaly_detector_ensemble_detector_0.keras  anomaly_detector_ensemble_detector_0_threshold.json  anomaly_detector_ensemble_detector_1.keras  anomaly_detector_ensemble_detector_1_threshold.json  anomaly_detector_ensemble_detector_2.keras  anomaly_detector_ensemble_detector_2_threshold.json  astroDataManager.py  fuelTest.py  hazard_detector_model.keras  hazard_detector_model_threshold.json  main.py  main2.py  mission-control-server.py  mission-control-server2.py  networking.py  optimiser.py  parameterised.py  qodana.yaml  rh.py  sensor.py  teg.py  temp_checkpoint.json  test.py
SpaceTravellarAI/UnitTest/: AIsystem.py  CommandHandler.py  Mars.py  hazard_detector_model_threshold.json  mars_mission.py  mission_evaluator.py  missionphase.py
SpaceTravellarAI/UnitTest/mission_reports/: mars_mission_20250510_002035.json  mars_mission_20250514_014517.json  mars_mission_20250514_015139.json  mars_mission_20250514_015446.json  mars_mission_20250514_024116.json  mars_mission_20250514_041115.json  mars_mission_20250514_043721.json  (+4 more)
SpaceTravellarAI/data/: celestial_data.json
SpaceTravellarAI/main/: networkMain.py
SpaceTravellarAI/networking/: IPCMessage.py
SpaceTravellarAI/old code/: AICaptain.py  AIModule.py  Network_Communication.py  ai_captain_checkpoint.json  ai_captain_checkpoint.keras  buffer.py  memory.py
SpaceTravellarAI/oldModek/: ai_captain_checkpoint.json  ai_captain_emergency_checkpoint.json  ai_captain_emergency_checkpoint.keras  anomaly_detector_model.keras  anomaly_detector_model_threshold.json  hazard_detector_model.keras  hazard_detector_model_threshold.json
spaceCUDA/: CMakeLists.txt
spaceCUDA/include/ai/: AIDataPacket.cuh
spaceCUDA/include/core/: ECS.cuh  dataChecker.cuh  device_data_manager.cuh  physics_components.cuh  physics_system.cuh  simulation_manager.cuh
spaceCUDA/include/physics/: Body.cuh  NetworkingCLient.h  physics_engine.cuh  solar_system_factory.cuh  spaceship.cuh
spaceCUDA/include/physics/visualisation/: opengl_renderer.cuh
spaceCUDA/src/: main.cu  test_physics_engine.cu
spaceCUDA/src/physics/: physics_engine.cu
spaceCUDA/src/physics/visualisation/: opengl_renderer.cu
spaceCUDA/test/: TestMain.cu  main1.cu  teswe.cpp
spacecraftFireware/: CMakeLists.txt
spacecraftFireware/include/: packagem.h
spacecraftFireware/include/commad/: command.h
spacecraftFireware/include/logger/: LogMacros.h  logger.h
spacecraftFireware/include/memory/: InternediateMemory.h  longTermMemory.h  shortTermMemory.h
spacecraftFireware/include/missionContext/: MissionContext.h  SpacecraftStatus.h
spacecraftFireware/include/networking/: spacecraftServer.h
spacecraftFireware/include/safety/: safetyManager.h
spacecraftFireware/include/test/: test_reporter.h
spacecraftFireware/src/: Test_spacecraftFirmware.cpp  main.cpp
spacecraftFireware/src/command/: command.cpp
spacecraftFireware/src/logger/: logger.cpp
spacecraftFireware/src/memory/: InternediateMemory.cpp  longTermMemory.cpp  shortTermMemory.cpp
spacecraftFireware/src/missionContext/: MissionContext.cpp  SpacecraftStatus.cpp
spacecraftFireware/src/networking/: spacecraftServer.cpp
spacecraftFireware/src/safety/: safetyManager.cpp
(+8 files in other folders)
